Fix account page layout on mobile

--- a/src/styles/pages/account.module.css
+++ b/src/styles/pages/account.module.css
@@ -1,6 +1,11 @@
 .sketches {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 1rem;
+}
+
+.sketches>* {
+    grid-column: span 1;
 }
 
 .sketchMain {
@@ -21,10 +26,6 @@
 
 .form {
     width: 100%;
-    gap: 3rem;
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
 }
 
 @media (max-width: 600px) {
@@ -39,8 +40,7 @@
 }
 
 .avatarWrapper {
-    height: 100%;
-    width: 30%;
+    max-height: 100%;
     aspect-ratio: 1;
     border-radius: 50%;
     position: relative;
